package athleticli.exceptions;

/**
 * Represents the exceptions that need to be shown to the user.
 */
public class AthletiException extends Exception {
    public AthletiException(String message) {
        super(message);
    }
}
