package athleticli.ui;


public class Parameter {
    public static final String DURATION_SEPARATOR = "duration/";
    public static final String DISTANCE_SEPARATOR = "distance/";
    public static final String DATETIME_SEPARATOR = "datetime/";
    public static final String ELEVATION_SEPARATOR = "elevation/";
    public static final String SWIMMING_STYLE_SEPARATOR = "style/";
    public static final String DETAIL_FLAG = "-d";

    public static final String CALORIES_SEPARATOR = "calories/";
    public static final String PROTEIN_SEPARATOR = "protein/";
    public static final String CARB_SEPARATOR = "carb/";
    public static final String FAT_SEPARATOR = "fat/";

    public static final String START_TIME_SEPARATOR = "start/";
    public static final String END_TIME_SEPARATOR = "end/";
    public static final String SPORT_SEPARATOR = "sport/";
    public static final String TYPE_SEPARATOR = "type/";
    public static final String PERIOD_SEPARATOR = "period/";
    public static final String TARGET_SEPARATOR = "target/";
}
